[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Font/Spritecoder_Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Src/GUI/EnemyGUI/DiceTimerProgress.gd" type="Script" id=2]
[ext_resource path="res://Src/GUI/DiceCoreLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/GUI/EnemyGUI/Wrapper.gd" type="Script" id=4]
[ext_resource path="res://Assets/GUI/heart.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI/enemy-result-frame.png" type="Texture" id=6]
[ext_resource path="res://Assets/GUI/dice-core-shape1.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI/timer-terang.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/timer-gelap.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/enemy-limiter.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/enemy-indexer.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=10]
script/source = "extends Label


func _on_number_changed(number: int) -> void:
	text = str(number)
"

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 20
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "NumberGenerated"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/Indexer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -30, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/Limiter:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 0 ), Vector2( 102, 0 ), Vector2( 72, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/MarginContainer/DiceCore/DiceCoreLabel")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_true_seed"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/Indexer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/Limiter:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 72, 0 ) ]
}

[sub_resource type="GDScript" id=6]
script/source = "extends AnimationPlayer


func _on_DiceCoreLabel_random_finished() -> void:
	play(\"NumberGenerated\")
"

[node name="GUIwrapper" type="Node2D"]
script = ExtResource( 4 )

[node name="EnemyGUI" type="Control" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyGUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -42.5
margin_right = 116.0
margin_bottom = 5.5
custom_constants/separation = 4

[node name="DiceTimerProgress" type="TextureProgress" parent="EnemyGUI/VBoxContainer"]
margin_right = 216.0
margin_bottom = 4.0
max_value = 150.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 8 )
script = ExtResource( 2 )
time_offset = -0.9

[node name="HBoxContainer" type="HBoxContainer" parent="EnemyGUI/VBoxContainer"]
margin_top = 8.0
margin_right = 216.0
margin_bottom = 48.0
custom_constants/separation = 40
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="EnemyGUI/VBoxContainer/HBoxContainer"]
margin_right = 72.0
margin_bottom = 40.0
custom_constants/margin_top = 4

[node name="HealthContainer" type="HBoxContainer" parent="EnemyGUI/VBoxContainer/HBoxContainer/MarginContainer"]
margin_top = 4.0
margin_right = 72.0
margin_bottom = 40.0

[node name="Health" type="TextureRect" parent="EnemyGUI/VBoxContainer/HBoxContainer/MarginContainer/HealthContainer"]
margin_right = 32.0
margin_bottom = 32.0
size_flags_vertical = 0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="EnemyGUI/VBoxContainer/HBoxContainer/MarginContainer/HealthContainer/Health"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ResultNumber" type="TextureRect" parent="EnemyGUI/VBoxContainer/HBoxContainer/MarginContainer/HealthContainer"]
margin_left = 36.0
margin_right = 72.0
margin_bottom = 36.0
texture = ExtResource( 6 )

[node name="ResultLabel" type="Label" parent="EnemyGUI/VBoxContainer/HBoxContainer/MarginContainer/HealthContainer/ResultNumber"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
text = "1"
align = 1
valign = 1
script = SubResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="EnemyGUI/VBoxContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 216.0
margin_bottom = 40.0

[node name="Indexer" type="TextureRect" parent="EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 40.0
size_flags_vertical = 0
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/Indexer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -12.5
margin_right = 15.0
margin_bottom = 19.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HackedLabel" type="Label" parent="EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/Indexer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.929412, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 40.0
custom_constants/margin_top = 8

[node name="DiceCore" type="TextureRect" parent="EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/MarginContainer"]
margin_top = 8.0
margin_right = 32.0
margin_bottom = 40.0
size_flags_vertical = 0
texture = ExtResource( 7 )

[node name="DiceCoreLabel" parent="EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/MarginContainer/DiceCore" instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.5
margin_right = 0.0
margin_bottom = -0.5
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Limiter" type="TextureRect" parent="EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 40.0
size_flags_vertical = 0
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/Limiter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -12.5
margin_right = 16.0
margin_bottom = 19.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HackedLabel" type="Label" parent="EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/Limiter"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.882353, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "20"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/NumberGenerated = SubResource( 4 )
anims/RESET = SubResource( 5 )
script = SubResource( 6 )

[connection signal="random_finished" from="EnemyGUI/VBoxContainer/HBoxContainer/HBoxContainer/MarginContainer/DiceCore/DiceCoreLabel" to="AnimationPlayer" method="_on_DiceCoreLabel_random_finished"]
